--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -776,8 +776,7 @@ It is recommended to {\it NOT} specify cosmological parameters and thus
 use the defaults; global default updates are easily propagated thru 
 Github rather than modifying numerous sim-input files.
 The curvature is computed internally as $\Ok = 1 - \OM - \OL$,
-and the radiation term is ignored. Time-varying $w$
-is currently not implemented.
+and the radiation term is ignored. 
 
 For non-standard $H(z$), {\tt HzFUN\_FILE} specifies an aribtrary
 function with 2-columns: $z$ and $H(z)$. 
