--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6401,12 +6401,13 @@ Here are examples of available options for the sim-input file:
    RANSYSTPAR_RANGESHIFT_OMEGA_MATTER: -0.2 0.4   # flat shift range for OM
 
   # filter-dependent variants:
-   RANSYSTPAR_SIGSHIFT_ZP: 0.014                  # same sigma per band
-   RANSYSTPAR_SIGSHIFT_ZP(gr,iz):   0.013 0.02    # sig(g&r)=0.013, sig(i&z.02
-   RANSYSTPAR_SIGSHIFT_ZP(g,r,i,z): 0.01 .02 .03 .04  # diff sigma per band
+  RANSYSTPAR_SIGSHIFT_ZP:           .01 .02 -0.01 .03      # sigma per band
+  RANSYSTPAR_SIGSHIFT_ZP(g,r,i,z):  .01 .02 -0.01 .03      # idem
+  RANSYSTPAR_SIGSHIFT_ZP(gr,iz):    0.01 0.02     # sig(g&r)=0.01, sig(i&z)=.02
+  RANSYSTPAR_SIGSHIFT_ZP(g,riz):    0.01  .03     # sig(g)=0.01, sig(r&i&z)=.03
 
-   RANSYSTPAR_SIGSHIFT_LAMFILT:          10         # sig=10 A for each band
-   RANSYSTPAR_SIGSHIFT_LAMFILT(g,r,i,z): 8 7 10 9   # sigma per band
+  RANSYSTPAR_SIGSHIFT_LAMFILT:          8 7 19 9   # sigma per band
+  RANSYSTPAR_SIGSHIFT_LAMFILT(g,r,i,z): 8 7 10 9   # idem
 
   # after ransyst params are picked, reset randoms with fixed seed
   # to suppress random fluctuations between GENVERSIONS
