Updated doc to include RANSYSTPAR redshift

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6394,6 +6394,7 @@ Here are examples of available options for the sim-input file:
    RANSYSTPAR_SIGSCALE_FLUXERR2: 0.04     # scale measured flux-errors
    RANSYSTPAR_SIGSCALE_MWEBV:    0.05     # scale MWEBV 
    RANSYSTPAR_SIGSHIFT_MWRV:     0.2      # shift RV
+   RANSYSTPAR_SIGSHIFT_REDSHIFT: 1E-4     # shift measured redshift
    RANSYSTPAR_SIGSHIFT_W0:           0.1  # shift w
    RANSYSTPAR_SIGSHIFT_OMEGA_MATTER: 0.1  # shift OM
 
