Added glob functionality. Added random GENMODEL

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6401,6 +6401,8 @@ Here are examples of available options for the sim-input file:
    RANSYSTPAR_RANGESHIFT_W0:           -0.5 0.5   # flat shift range for w
    RANSYSTPAR_RANGESHIFT_OMEGA_MATTER: -0.2 0.4   # flat shift range for OM
 
+   RANSYSTPAR_GENMODEL_WILDCARD: "/path/to/genmodels*" # picks random model out of globbed list
+
   # filter-dependent variants:
   RANSYSTPAR_SIGSHIFT_ZP:           .01 .02 -0.01 .03      # sigma per band
   RANSYSTPAR_SIGSHIFT_ZP(g,r,i,z):  .01 .02 -0.01 .03      # idem
